# pycypher-nmetl

./: .coverage  .coveragerc  .dockerignore  .editorconfig  .env.example  .gitignore  .gitignorebak  .pre-commit-config.yaml  AST_MODELS_TEST_ANALYSIS.md  AST_TO_RELATIONAL_ALGEBRA.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CYPHER_TO_AST_TRANSLATION_GUIDE.md  DEVELOPMENT.md  Dockerfile  Dockerfile.dev  Dockerfile.fastopendata  Dockerfile.fastopendata-api  Dockerfile.site  EXTENDED_GRAMMAR_SUMMARY.md  MORE_COWBELL_PLAN.md  Makefile  Makefile.new  NAMING_CHANGES.md  README.md  README.rst  REQUIREMENTS.md  SEMANTIC_VALIDATOR_SUMMARY.md  TEST_COVERAGE_SUMMARY.md  TEST_RESULTS.md  TEST_RESULTS_SUMMARY.md  Untitled.ipynb  analyze_missing_docstrings.py  api_baseline.json  benchmark.py  big_csv.py  calculate_docstring_coverage.py  classes.html  count_all_elements.py  (+37 more)
.claude/: team-file-coordination.md
.claude/skills/: start-team.md  stop-team.md  team-status.md
.doctrees/: DATA_FOUNDATION_PLAN.doctree  duckdb_full_parity_design.doctree  duckdb_out_of_core_design.doctree  getting_started.doctree  hello_world.doctree  index.doctree  spark_backend_design.doctree
.doctrees/adr/: adr-001-lark-earley-parser.doctree  adr-002-binding-frame-ir.doctree  adr-003-id-only-column-preservation.doctree  adr-004-shadow-write-mutations.doctree  adr-005-backend-engine-protocol.doctree  adr-006-star-class-decomposition.doctree  adr-007-cardinality-estimator-extraction.doctree  index.doctree
.doctrees/api/: index.doctree  shared.doctree
.doctrees/deployment/: docker.doctree  environment.doctree  index.doctree  monitoring.doctree  scaling.doctree  security.doctree  troubleshooting.doctree
.doctrees/developer_guide/: architecture.doctree  contributing.doctree  index.doctree  release.doctree  security.doctree  testing.doctree  threat_model.doctree
.doctrees/tutorials/: ast_manipulation.doctree  basic_query_parsing.doctree  cypher_for_sql_users.doctree  data_etl_pipeline.doctree  graph_modeling.doctree  index.doctree  integration_guide.doctree  pattern_matching.doctree  production_deployment.doctree  query_validation.doctree  troubleshooting.doctree
.doctrees/user_guide/: ast_nodes.doctree  backend_delegation.doctree  configuration.doctree  constants_reference.doctree  data_model.doctree  data_preview.doctree  error_handling.doctree  index.doctree  performance_tuning.doctree  query_processing.doctree  variables.doctree
.dvc/: config
.github/: copilot-instructions.md  copilot-instructions.md.bak  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  docs.yml  main.yml  makefile.yml  pages.yml  publish-docs.yml  static.yml
_modules/pycypher/: aggregation_evaluator.html  aggregation_planner.html  arithmetic_evaluator.html  (+32 more)
_sources/: duckdb_full_parity_design.md.txt  getting_started.rst.txt
adr/: adr-003-id-only-column-preservation.html
api/: pycypher.html
data_obj/: Untitled6.ipynb
deployment/: monitoring.html
developer_guide/: security.html  threat_model.html
docs/: ACSPUMS2024CodeLists.xls  AST_VARIABLE_REPRESENTATION.md  DATA_FOUNDATION_PLAN.md  GRAMMAR_PARSER_GUIDE.md  README.md  SAT_SOLVER_INTEGRATION.md  SPHINX_SETUP_COMPLETE.md  TEST_COVERAGE_CYPHER_QUERY_SOLVER.md  api.rst  architecture.rst  conf.py  duckdb_out_of_core_design.md  examples.rst  find_missing_docs.py  fix_core_etl_imports.py  fix_util_imports.py  getting_started.rst  index.html  index.rst  modules.html  nmetl_tutorial.md  objects.inv  quickref.rst  remove_nonexistent_imports.py  requirements.in  search.html  usage.html
examples/: advanced_grammar_examples.py  ast_conversion_example.py  backend_selection.py  data_preview_demo.py  functions_in_where.py  hello_world.py  multi_query_composition.py  production_patterns.py  projection_conversion_example.py  quickstart.py  scalar_functions_in_with.py  solver_usage.py
fdb_build/: Dockerfile  build.sh  fdb.cluster
grafana/: datasource.yml
prometheus/: prometheus.yml
scripts/: api_surface_baseline.txt  check_api_surface.py  check_feature_completeness.py  check_file_deps.py  check_import_cycles.py  check_orphan_modules.py  check_security_patterns.py  code_quality.py  import_cycles_baseline.txt  lint_changed.sh  setup_workspace.py
sphinx_docs/: api.rst  index.rst  modules.rst  py-modindex.html  pycypher.core.node_classes.rst  pycypher.core.tree_mixin.rst  pycypher.etl.data_source.rst  pycypher.etl.fact.rst  pycypher.etl.goldberg.rst  pycypher.etl.queue_processor.rst  pycypher.etl.solver.rst  pycypher.etl.trigger.rst  pycypher.html  pycypher.rst  pycypher.util.cli.rst  pycypher.util.config.rst  pycypher.util.configuration.rst  pycypher.util.exceptions.rst  pycypher.util.helpers.rst  pycypher.util.logger.rst  pycypher.util.nmetl_cli.rst  searchindex.js  tutorial.md
tests/: _perf_helpers.py  conftest.py  fixtures.py  tdd_helpers.py  test_abs_null.py  test_adaptive_join_strategy.py  test_advanced_feature_modules.py  test_aggregation_dispatch.py  test_aggregation_evaluator.py  test_aggregation_in_scalar_context.py  test_aggregation_planner.py  test_aggregation_registry_contract.py  test_alerting_system.py  test_algebra.py  test_arithmetic_evaluator.py  test_arithmetic_operations.py  test_arithmetic_operator_semantics.py  test_arithmetic_type_errors.py  test_arrow_pandas_cache.py  test_arrow_utils_coverage.py  test_asin_acos_domain.py  test_ast_cache_lru_eviction.py  test_ast_conversion_errors.py  test_ast_converter_coverage.py  test_ast_converter_unit.py  test_ast_execution.py  test_ast_models.py  test_ast_models_coverage_gaps.py  test_ast_models_verification.py  test_ast_parse_cache.py  test_ast_rewriter.py  test_ast_rewriter_coverage.py  test_ast_validation.py  test_async_query_execution.py  test_audit_chain_rotation.py  test_audit_log.py  test_auto_column_names.py  test_auto_column_names_predicates.py  test_backend_delegation.py  test_backend_e2e_acceptance.py  (+458 more)
tutorials/: ast_manipulation.html  cypher_for_sql_users.html  graph_modeling.html  ml_optimization.html
(+630 files in other folders)
