[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
pycypher = { workspace = true }
shared = { workspace = true }

[project]
name = "pycypher-workspace"
version = "0.0.1"
description = "PyCypher monorepo workspace"
readme = "README.md"
requires-python = "==3.14.0a6+freethreaded"
keywords = ["neo4j", "cypher", "parser", "relational algebra"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pycypher",
    "pyspark>=4.1.1",
    "rich>=13.9.4",
    "shared",
]

[[project.authors]]
name = "Zachary Ernst"
email = "zac.ernst@gmail.com"

[[project.maintainers]]
name = "Zachary Ernst"
email = "zac.ernst@gmail.com"

[project.license]
file = "LICENSE.txt"

[project.urls]
Homepage = "https://github.com/zacernst/pycypher"
Documentation = "https://zacernst.github.io/pycypher/"
shared = { workspace = true }

[tool.pylint.main]
disable = ["line-too-long", "trailing-whitespace", "missing-docstring"]

[tool.ruff]
line-length = 79
indent-width = 4
target-version = "py312"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "raw_data",
]

[tool.ruff.lint]
select = ["ALL"]

[tool.coverage.report]
exclude_also = [
    "def tree",
    "def print_tree",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
testpaths = ["tests"]
markers = [
    "slow: Marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: Integration tests (deselect with '-m \"not integration\"')",
]
timeout = 30
# Performance optimizations
minversion = "8.0"
# Don't capture output for faster execution (use -s to override)
# addopts already includes necessary flags


[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.1",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.3.1",
    "ruff>=0.6.3",
    "isort>=5.13.2",
    "myst-parser>=4.0.1",
    "sphinx>=7.4.7",
    "ty>=0.0.1a6",
]

